tests/snapshots/snapshot_golden_master__gm_ir_content_text.snap
---
source: tests/snapshot_golden_master.rs
expression: "IrContentBlock::Text { text: \"plain text block\".into() }"
---
{
  "type": "text",
  "text": "plain text block"
}
