tests/snapshots/snapshot_golden_master__gm_ir_content_tool_use.snap
---
source: tests/snapshot_golden_master.rs
expression: "IrContentBlock::ToolUse\n{\n    id: \"tu_gm_300\".into(), name: \"grep\".into(), input:\n    json!({\"pattern\": \"TODO\", \"path\": \"src/\"}),\n}"
---
{
  "type": "tool_use",
  "id": "tu_gm_300",
  "name": "grep",
  "input": {
    "path": "src/",
    "pattern": "TODO"
  }
}
