tests/snapshots/snapshot_golden_master__gm_ir_conversation_empty.snap
---
source: tests/snapshot_golden_master.rs
expression: "IrConversation::new()"
---
{
  "messages": []
}
