tests/snapshots/snapshot_golden_master__gm_ir_message_assistant.snap
---
source: tests/snapshot_golden_master.rs
expression: msg
---
{
  "role": "assistant",
  "content": [
    {
      "type": "text",
      "text": "Closures capture their environment."
    }
  ]
}
