tests/snapshots/snapshot_golden_master__gm_ir_message_system.snap
---
source: tests/snapshot_golden_master.rs
expression: msg
---
{
  "role": "system",
  "content": [
    {
      "type": "text",
      "text": "You are a Rust expert."
    }
  ]
}
