tests/snapshots/snapshot_golden_master__gm_ir_message_tool_role.snap
---
source: tests/snapshot_golden_master.rs
expression: msg
---
{
  "role": "tool",
  "content": [
    {
      "type": "tool_result",
      "tool_use_id": "tu_gm_100",
      "content": [
        {
          "type": "text",
          "text": "file contents here"
        }
      ],
      "is_error": false
    }
  ]
}
