tests/snapshots/snapshot_golden_master__gm_ir_message_user_text.snap
---
source: tests/snapshot_golden_master.rs
expression: msg
---
{
  "role": "user",
  "content": [
    {
      "type": "text",
      "text": "Explain closures in Rust."
    }
  ]
}
